--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     "sharp": "^0.33.5",
     "tailwindcss": "^4.0.14",
     "twemoji": "^14.0.2"
+  },
+  "devDependencies": {
+    "@astrojs/language-server": "^2.13.4"
   }
 }
